2007-05-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/config.py (buildEatersDict): Document.
	(buildPropertyDict): Document.
	(buildPlugsSet): Document.

2007-05-23  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_component.py:
	  Rewrite this test in a twisted-2.0 compatible way.

2007-05-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/wizard/steps.py (Vorbis.worker_changed): Remove print.

	* flumotion/worker/job.py (JobAvatar.setMind.error): Fix debug
	statement which triggered tracebacks in error paths.

2007-05-23  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_defer.py:
	* flumotion/test/test_pb.py:
	  Remove deprecated uses of reactor.iterate() which aren't needed.
	  There are some remaining.

2007-05-23  Michael Smith <msmith@fluendo.com>

	* flumotion/component/component.py:
	  Allow the component to respond to getState() remote calls before
	  login is complete, so that we can (in a later version) avoid some
	  races (e.g. #624) in connecting components. Unfortunately we can't
	  do that right now or a new manager will break existing components.

2007-05-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/launch/parse.py (Component.complete_and_verify):
	Update for change to ConfigEntryComponent.

	* flumotion/common/config.py (ConfigEntryComponent._buildConfig)
	(ConfigEntryComponent.__init__, BaseConfigParser.parseComponent):
	Parse "project" attributes on components, and add them to the
	config dict.

	* flumotion/test/test_config.py
	(TestConfig.testParseComponentWithProject): Add a test for parsing
	<component> entries with project=foo.

	* flumotion/component/bouncers/ipbouncer.xml: Fix the xml.

	* flumotion/common/fxml.py (Parser.parseTextNode): Move here from
	config.py, and document. Accept CDATA_SECTION_NODE nodes.
	(Parser.parseTextNode): Raise self.parserError, not ConfigError.

	* flumotion/manager/manager.py
	(Vishnu.loadManagerConfigurationXML): Untested fix.

2007-05-22  Michael Smith <msmith@fluendo.com>
